[gd_scene load_steps=13 format=2]

[ext_resource path="res://main/world/level/level_tools/death_tile.png" type="Texture" id=1]
[ext_resource path="res://main/world/level/level.gd" type="Script" id=2]
[ext_resource path="res://main/world/level/level_tools/death_fall_tile_map.gd" type="Script" id=3]
[ext_resource path="res://main/world/level/level_tools/damage_tile.gd" type="Script" id=4]
[ext_resource path="res://main/world/level/level_tools/spike_ball.png" type="Texture" id=5]
[ext_resource path="res://main/world/level/level_tools/goal/Goal.tscn" type="PackedScene" id=6]
[ext_resource path="res://main/world/level/1_city/music1.mp3" type="AudioStream" id=7]

[sub_resource type="ConvexPolygonShape2D" id=1]
points = PoolVector2Array( 0, 0, 32, 0, 32, 32, 0, 32 )

[sub_resource type="TileSet" id=2]
0/name = "death_tile.png 0"
0/texture = ExtResource( 1 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 32, 32 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape = SubResource( 1 )
0/shape_one_way = false
0/shape_one_way_margin = 1.0
0/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 1 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
0/z_index = 0

[sub_resource type="OccluderPolygon2D" id=5]
polygon = PoolVector2Array( 23.5124, 15.5717, 22.3011, 20.0131, 15.8409, 23.5124, 9.51525, 20.6861, 8, 16, 9.64983, 10.4574, 16, 8, 22.1665, 10.3228 )

[sub_resource type="ConvexPolygonShape2D" id=3]
points = PoolVector2Array( 0, 0, 32, 0, 32, 32, 0, 32 )

[sub_resource type="TileSet" id=4]
0/name = "spike_ball.png 0"
0/texture = ExtResource( 5 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 32, 32 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/occluder = SubResource( 5 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape = SubResource( 3 )
0/shape_one_way = false
0/shape_one_way_margin = 1.0
0/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 3 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
0/z_index = 0

[node name="Level" type="Node2D"]
script = ExtResource( 2 )

[node name="Background" type="TileMap" parent="."]
cell_size = Vector2( 32, 32 )
collision_layer = 0
collision_mask = 0
occluder_light_mask = 2
format = 1

[node name="Layer1" type="TileMap" parent="."]
cell_size = Vector2( 32, 32 )
collision_mask = 0
occluder_light_mask = 2
format = 1

[node name="Layer2" type="TileMap" parent="."]
cell_size = Vector2( 32, 32 )
collision_mask = 0
occluder_light_mask = 2
format = 1

[node name="Layer3" type="TileMap" parent="."]
cell_size = Vector2( 32, 32 )
collision_mask = 0
occluder_light_mask = 2
format = 1

[node name="DeathFallTile" type="TileMap" parent="."]
modulate = Color( 1, 1, 1, 0.45098 )
tile_set = SubResource( 2 )
cell_size = Vector2( 32, 32 )
collision_layer = 32
collision_mask = 0
format = 1
script = ExtResource( 3 )

[node name="DamageTile" type="TileMap" parent="."]
tile_set = SubResource( 4 )
cell_size = Vector2( 32, 32 )
collision_layer = 128
collision_mask = 0
format = 1
script = ExtResource( 4 )

[node name="Decoration" type="Node2D" parent="."]

[node name="Obstacles" type="Node2D" parent="."]

[node name="Enemies" type="Node2D" parent="."]

[node name="Collectibles" type="Node2D" parent="."]

[node name="PlayerSpawn" type="Position2D" parent="."]

[node name="Goal" parent="." instance=ExtResource( 6 )]

[node name="MusicPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )
volume_db = -12.0
autoplay = true
